# M.A.V.E.R.I.C.K

./: .gitignore  README.md  Run_Maverick.py  air_pollution_content.txt  package.json
maverickbot/: .env  .env.example  __init__.py  __main__.py  cli.py  pyproject.toml  requirements.txt
maverickbot/agent/: __init__.py  context_manager.py  fallback_manager.py  loop.py  runner.py  session.py  subagent.py  thinking_agent.py  workflow.py
maverickbot/agent/tools/: __init__.py  base.py  create_docx.py  create_image.py  create_pdf.py  create_pptx.py  create_xlsx.py  data_tools.py  edit_tool.py  execute_code.py  fetch_url.py  file_management.py  git_tools.py  glob_tool.py  grep_tool.py  mcp_tools.py  pdf_tools.py  plan_tool.py  read_csv.py  read_docx.py  read_file.py  read_image.py  read_pdf.py  read_xlsx.py  registry.py  search_tool.py  shell_tool.py  system_tools.py  text_to_speech.py  (+3 more)
maverickbot/cli/: __init__.py  banner.py  config.py  runner.py  spinner.py
maverickbot/config/: __init__.py  schema.py
maverickbot/core/: __init__.py  plugin_loader.py  registry.py  skill_manager.py
maverickbot/mcp/: __init__.py  client.py
maverickbot/multiagent/: __init__.py  base.py  message_bus.py  orchestrator.py  supervisor.py  worker.py
maverickbot/providers/: __init__.py  base.py  groq_provider.py  lmstudio_provider.py  nvidia_provider.py  ollama_provider.py  openai_provider.py  registry.py
maverickbot/skills/: __init__.py
maverickbot/utils/: rate_limiter.py
maverickbot/ux/: __init__.py  agent.py  confirm.py  constants.py  file_finder.py  friendly.py  user_input.py
(+21 files in other folders)
